# src/services/douj/schema.ts
@@ -1,4 +1,5 @@
 import {checkSchema} from "express-validator";
+import {paginationSchemaRaw} from "../public/schema.js";
 const newDoujSchema = checkSchema({
   title: {
     in: "body",
@@ -17,6 +18,20 @@ const newDoujSchema = checkSchema({
   link: {
     in: "body",
     isString: true
+  },
+  tags: {
+    in: "body",
+    optional: true,
+    isString: true
+  },
+  visibility: {
+    in: "body",
+    optional: true,
+    isString: true,
+    isIn: {
+      options: [["private", "public"]],
+      errorMessage: "Visibility must be either 'private' or 'public'"
+    }
   }
 });
 
@@ -26,5 +41,22 @@ const newCategorySchema = checkSchema({
     in: "body"
   }
 });
-
-export {newCategorySchema, newDoujSchema};
+const publicDoujGetListSchema = checkSchema({
+  ...paginationSchemaRaw,
+  category: {
+    in: "query",
+    isString: true,
+    optional: {options: {nullable: true}}
+  },
+  search: {
+    in: "query",
+    isString: true,
+    optional: {options: {nullable: true}}
+  },
+  tags: {
+    in: "query",
+    isString: true,
+    optional: {options: {nullable: true}}
+  }
+});
+export {newCategorySchema, newDoujSchema, publicDoujGetListSchema};
